# perovskite

./: .gitignore  AI_AGENTS.md  Cargo.toml  GEMINI.md  PRIMER.md  README.md  SECURITY.md  cookbook.md
cuberef_client/: Cargo.toml
cuberef_client/src/: block_renderer.rs  client_main.rs  cube_renderer.rs  lib.rs  loadtester.rs  main.rs  main_menu.rs
cuberef_client/src/game_state/: chat.rs  chunk.rs  input.rs  items.rs  mod.rs  physics.rs  settings.rs  tool_controller.rs  utils.rs
cuberef_client/src/game_ui/: egui_ui.rs  hud.rs  mod.rs
cuberef_client/src/net_client/: client_context.rs  mesh_worker.rs  mod.rs
cuberef_client/src/vulkan/: batched_buffer.rs  game_renderer.rs  mod.rs  settings.rs  util.rs
cuberef_client/src/vulkan/shaders/: cube_geometry.rs  egui_adapter.rs  flat_texture.rs  mod.rs  supersampler.rs
cuberef_core/: Cargo.toml  LICENSE  build.rs
cuberef_core/proto/: blocks.proto  coordinates.proto  game_rpc.proto  items.proto  mapchunk.proto  players.proto  render.proto  ui.proto
cuberef_core/src/: auth.rs  block_id.rs  chat.rs  constants.rs  coordinates.rs  lib.rs  lighting.rs
cuberef_game_api/: Cargo.toml
cuberef_game_api/src/: blocks.rs  game_builder.rs  items.rs  lib.rs  main.rs
cuberef_game_api/src/default_game/: basic_blocks.rs  foliage.rs  furnace.rs  game_behaviors.rs  mod.rs  recipes.rs  tools.rs
cuberef_game_api/src/default_game/mapgen/: mod.rs
cuberef_server/: Cargo.toml
cuberef_server/src/: lib.rs  media.rs  resources.rs  server.rs
cuberef_server/src/builtin_plugin/: blocks.rs
cuberef_server/src/database/: database_engine.rs  mod.rs  rocksdb.rs
cuberef_server/src/game_state/: blocks.rs  client_ui.rs  event.rs  game_behaviors.rs  game_map.rs  handlers.rs  inventory.rs  items.rs  mapgen.rs  mod.rs  player.rs  testutils.rs
cuberef_server/src/game_state/chat/: mod.rs
cuberef_server/src/game_state/game_map/: lighting.rs
cuberef_server/src/game_state/tests/: map_tests.rs  mod.rs
cuberef_server/src/network_server/: auth.rs  client_context.rs  grpc_service.rs  mod.rs
perovskite_client/: Cargo.toml  FONT_LICENSE  README.md  build.rs
perovskite_client/benches/: audio_bench.rs  gpu_chunk_bench.rs
perovskite_client/src/: block_renderer.rs  cache.rs  client_main.rs  lib.rs  loadtester.rs  main.rs  main_menu.rs  media.rs
perovskite_client/src/audio/: doppler.ipynb  mod.rs
perovskite_client/src/client_state/: block_types.rs  chat.rs  chunk.rs  entities.rs  input.rs  items.rs  lightcycle.rs  mod.rs  physics.rs  settings.rs  timekeeper.rs  tool_controller.rs
perovskite_client/src/fonts/: ACKNOWLEDGEMENTS.txt  mod.rs
perovskite_client/src/game_state/: block_types.rs  chat.rs  chunk.rs  entities.rs  gui.rs  input.rs  items.rs  lightcycle.rs  mod.rs  physics.rs  settings.rs  timekeeper.rs  tool_controller.rs
perovskite_client/src/game_ui/: egui_ui.rs  hud.rs  mod.rs
perovskite_client/src/game_ui/egui_ui/: refinements.rs
perovskite_client/src/net_client/: client_context.rs  client_workers.rs  mesh_worker.rs  mod.rs
perovskite_client/src/vulkan/: atlas.rs  block_renderer.rs  entity_renderer.rs  far_geometry.rs  game_renderer.rs  gpu_chunk_table.rs  mini_renderer.rs  mod.rs  raytrace_buffer.rs  text_renderer.rs  util.rs
perovskite_client/src/vulkan/shaders/: color_mapping.glsl  cube_geometry.rs  cube_geometry.vert  cube_geometry_vtx.glsl  egui_adapter.rs  encoding.glsl  entity.vert  entity_geometry.rs  entity_vert.glsl  far_mesh.frag  far_mesh.rs  far_mesh.vert  far_mesh_frag.glsl  far_mesh_vert.glsl  flat_texture.rs  mask_specular_stencil_frag.glsl  mod.rs  post_process.rs  raster_frag_lighting.glsl  raytracer.rs  raytracer_bindings.glsl  raytracer_blend_frag.glsl  raytracer_deferred_shadow_frag.glsl  raytracer_deferred_specular_frag.glsl  raytracer_frag.glsl  raytracer_frag_common.glsl  raytracer_spec_constants.glsl  raytracer_vtx.glsl  raytracing_scratchpad.ipynb  sky.rs  (+5 more)
perovskite_core/: Cargo.toml  README.md  build.rs
perovskite_core/proto/: audio.proto  blocks.proto  coordinates.proto  entities.proto  game_rpc.proto  items.proto  mapchunk.proto  players.proto  render.proto  ui.proto
perovskite_core/src/: auth.rs  block_id.rs  block_impl.rs  chat.rs  constants.rs  coordinates.rs  far_sheet.rs  game_actions.rs  items.rs  lib.rs  lighting.rs  render_selector.rs  sync.rs  time.rs  util.rs  vertical_occlusion.rs
perovskite_core/src/lighting/: tests.rs
perovskite_core/src/vertical_occlusion/: tests.rs
perovskite_game_api/: Cargo.toml  README.md
perovskite_game_api/benches/: game_map_bench.rs  mapgen_bench.rs
perovskite_game_api/src/: blocks.rs  game_builder.rs  items.rs  lib.rs  main.rs  test_support.rs
perovskite_game_api/src/animals/: mod.rs
perovskite_game_api/src/autobuild/: machines.rs  mod.rs
perovskite_game_api/src/blocks/: custom_geometry.rs
perovskite_game_api/src/carts/: DESIGN.md  DESIGN_MOVEMENT.md  DESIGN_ROUTING.md  DESIGN_STATION.md  TESTING.md  interlocking.rs  interlocking_test.rs  kinematics_test.ipynb  mod.rs  network.rs  signals.rs  station.rs  station_tests.rs  track_tool.rs  tracks.rs
perovskite_game_api/src/circuits/: gates.rs  mod.rs  simple_blocks.rs  switches.rs  wire.rs
perovskite_game_api/src/colors/: mod.rs
perovskite_game_api/src/default_game/: basic_blocks.rs  chest.rs  commands.rs  default_game_behaviors.rs  foliage.rs  furnace.rs  game_behaviors.rs  game_settings.rs  mod.rs  recipes.rs  shaped_blocks.rs  signs.rs  tools.rs
perovskite_game_api/src/discord/: mod.rs
perovskite_game_api/src/farming/: crops.rs  mod.rs  soil.rs  tea.rs
perovskite_game_api/src/test_support/: mod.rs
perovskite_server/: Cargo.toml  README.md  build.rs
perovskite_server/src/: formats.rs  lib.rs  media.rs  server.rs  sync.rs
perovskite_server/src/database/: database_engine.rs  mod.rs  rocksdb.rs
perovskite_server/src/game_state/: audio_crossbar.rs  blocks.rs  client_ui.rs  entities.rs  event.rs  game_behaviors.rs  game_map.rs  handlers.rs  inventory.rs  items.rs  mapgen.rs  mod.rs  player.rs
perovskite_server/src/network_server/: auth.rs  client_context.rs  grpc_service.rs
(+42 files in other folders)
