[workspace]
members = [
    "perovskite_server",
    "perovskite_client",
    "perovskite_core",
    "perovskite_game_api"
]
resolver = "2"

[profile.release]
debug = 1
# lto = "thin"
incremental = true

[profile.maxopt]
debug = 1
opt-level = 3
lto = "thin"
inherits = "release"

#[patch.crates-io]
#opaque-ke = { git = 'https://github.com/drey7925/opaque-ke.git', branch="v2-voprf-override" }

[replace]
#"voprf:0.4.0-pre.3" = { git = 'https://github.com/drey7925/voprf.git', branch='v0.4' }
"voprf:0.4.0-pre.3" = { path = 'C:/tmp/voprf' }