[package]
name = "cuberef_client"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Multiplayer voxel game written in Rust - Game client"

[dependencies]
argon2 = "0.4.1"
anyhow = "1.0.71"
cgmath = "0.18.0"
clap = { version = "4.3.0", features = ["derive"] }
cuberef_core = { path = "../cuberef_core", version = "0.0.1" }
egui = "0.21"
egui_winit_vulkano = "0.24.0"
env_logger = "0.10.0"
fps_counter = "2.0.0"
hex = "0.4.3"
image = "0.24.6"
line_drawing = "1.0.0"
log = "0.4.17"
microbench = "0.5.0"
opaque-ke = { version = "2.0.0", features = ["argon2"] }
parking_lot = "0.12.1"
rand = "0.8.5"
rustc-hash = "1.1.0"
texture_packer = { version = "0.25.0", features = ["bmp", "gif", "jpeg", "png", "tga", "webp", "common"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-scoped = "0.2.0"
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
tonic = { version = "0.9.2", features = ["gzip", "tls"] }
tracy-client = { version = "0.15.2", default-features = false, features = ["system-tracing", "context-switch-tracing", "sampling", "code-transfer",
            "broadcast"] }
vulkano = "0.33.0"
vulkano-shaders = { version = "0.33.0", features = ["shaderc-build-from-source"] }
vulkano-win = "0.33.0"
winit = { version = "0.28.3", features = ["serde"] }
unicode-normalization = "0.1.22"
textwrap = { version = "0.16.0", default-features = false }
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.5"
directories = "5.0.1"
arc-swap = "1.6.0"
ron = "0.8.0"
futures = "0.3.28"

[features]
default = []
# Performance tracing
tracy = ["tracy-client/enable"]
