[package]
name = "cuberef_core"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Multiplayer voxel game written in Rust - Core code shared between client and server"

[dependencies]
tonic = "0.9.1"
prost = "0.11"
prost-types = "0.11"
thiserror = "1.0.40"
anyhow = "1.0.70"
vec3D = "0.3.0"
cgmath = "0.18.0"

[build-dependencies]
tonic-build = "0.9.1"
