[package]
name = "cuberef_server"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Multiplayer voxel game written in Rust - Game server"

[dependencies]
anyhow = "1.0.70"
argfile = "0.1.5"
cgmath = "0.18.0"
clap = { version = "4.3.0", features = ["derive"] }
config = "0.13.3"
cuberef_core = { path = "../cuberef_core", version = "0.0.1" }
env_logger = "0.10.0"
hex = "0.4.3"
integer-encoding = "3.0.4"
lazy_static = "1.4.0"
log = "0.4.17"
microbench = "0.5.0"
parking_lot = { version = "0.12" }
prost = "0.11.9"
rocksdb = "0.21.0"
sha2 = "0.10.6"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
tonic = { version = "0.9.2", features = ["gzip", "tls"] }
tonic-reflection = "0.9.2"
uuid = { version="1.3.3", features = ["v4", "fast-rng"] }
vec3D = "0.3.0"

[dev-dependencies]
ctor = "0.2.0"
