[package]
name = "perovskite_core"
version = "0.0.4"
edition = "2021"
license = "Apache-2.0"
description = "Multiplayer voxel game written in Rust - Implementation details shared between client and server"
authors = ["drey7925 <drey@dreyclimbs.rocks>"]
repository = "https://github.com/drey7925/perovskite"
maintenance = { status = "experimental" }

[dependencies]
anyhow = "1.0.70"
argon2 = "0.5.3"
bitvec = "1.0.1"
bytemuck = { version = "1.16.1", features = ["derive"] }
cgmath = "0.18.0"
opaque-ke = { version = "3.0.0-pre.5", features = ["argon2"] }
parking_lot = "0.12.1"
prost = "0.13.1"
prost-types = "0.13.1"
rand = "0.8.5"
rustc-hash = "2.0.0"
thiserror = "1.0.40"
tonic = "0.12.3"
vec3D = "0.3.0"

[build-dependencies]
tonic-build = "0.12.1"
