[package]
name = "perovskite_core"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "Multiplayer voxel game written in Rust - Implementation details shared between client and server"
authors = ["drey7925 <drey@dreyclimbs.rocks>"]
repository = "https://github.com/drey7925/perovskite"

[dependencies]
anyhow = {  version = "1" , features = ["backtrace"]}
argon2 = "0.5.3"
bitvec = "1.0.1"
bytemuck = { version = "1.24.0", features = ["derive"] }
cgmath = "0.18.0"
generic-array = "0.14.7"
opaque-ke = { version = "2.1.0-pre.1", features = ["argon2"] }
parking_lot = "0.12.1"
tonic-prost = "0.14.2"
prost = "0.14.1"
rand = "0.8.5"
rustc-hash = "2.0.0"
thiserror = "2.0.17"
tonic = "0.14.2"
scopeguard = "1.2.0"
log = "0.4.28"
loom = { version = "0.7.2", features = ["default", "checkpoint"], optional = true }

[dev-dependencies]
loom = { version = "0.7.2", features = ["default", "checkpoint"] }

[build-dependencies]
tonic-prost-build = "0.14.2"

[features]
"loom_sync" = ["loom"]