[package]
name = "perovskite_server"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
description = "Multiplayer voxel game written in Rust - Game server"

[dependencies]
anyhow = "1.0.70"
argon2 = "0.4.1"
bitvec = "1.0.1"
cbloom = "0.1.3"
cgmath = "0.18.0"
clap = { version = "4.3.0", features = ["derive"] }
perovskite_core = { path = "../perovskite_core", version = "0.0.2" }
env_logger = "0.10.0"
hashbrown = "0.14.0"
hex = "0.4.3"
integer-encoding = "3.0.4"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
microbench = "0.5.0"
opaque-ke = { version = "2.0.0", features = ["argon2"] }
parking_lot = { version = "0.12.1" }
prost = "0.11.9"
rand = "0.8.5"
rocksdb = "0.21.0"
rustc-hash = "1.1.0"
sha2 = "0.10.6"
snap = "1.1.0"
thiserror = "1.0.40"
tokio = { version = "1.29.1", features = ["full", "tracing"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
tonic = { version = "0.9.2", features = ["gzip", "tls"] }
tonic-reflection = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracy-client = { version = "0.15.2", default-features = false, features = [ "system-tracing", "context-switch-tracing", "sampling", "code-transfer",
            "broadcast" ] }
uuid = { version="1.3.3", features = ["v4", "fast-rng"] }
vec3D = "0.3.0"
smallvec = "1.11.1"
futures = "0.3.28"
type-map = "0.5.0"

[dev-dependencies]
ctor = "0.2.0"

[features]
default = []
deadlock_detection = ["parking_lot/deadlock_detection"]

# Performance tracing
tracy = ["tracy-client/enable"]

dhat-heap = []
