[package]
name = "perovskite_server"
version = "0.0.4"
edition = "2021"
license = "Apache-2.0"
description = "Multiplayer voxel game written in Rust - Game server"
authors = ["drey7925 <drey@dreyclimbs.rocks>"]
repository = "https://github.com/drey7925/perovskite"
categories = ["game-engines"]
maintenance = { status = "experimental" }

[dependencies]
anyhow = "1.0.70"
argon2 = "0.4.1"
bitvec = "1.0.1"
cbloom = "0.1.3"
cgmath = "0.18.0"
clap = { version = "4.3.0", features = ["derive"] }
perovskite_core = { path = "../perovskite_core", version = "0.0.4" }
env_logger = "0.11.3"
hashbrown = "0.14.0"
hex = "0.4.3"
integer-encoding = "4.0.0"
itertools = "0.13.0"
lazy_static = "1.4.0"
log = "0.4.17"
microbench = "0.5.0"
opaque-ke = { version = "3.0.0-pre.5", features = ["argon2"] }
parking_lot = { version = "0.12.1" }
prost = "0.13.1"
rand = "0.8.5"
rocksdb = "0.22.0"
rustc-hash = "2.0.0"
sha2 = "0.10.6"
snap = "1.1.0"
thiserror = "1.0.40"
tokio = { version = "1.38.0", features = ["full", "tracing"] }
tokio-stream = "0.1.16"
tokio-util = "0.7.8"
tonic = { version = "0.12.3", features = ["gzip", "tls"] }
tonic-reflection = "0.12.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracy-client = { version = "0.17.0", default-features = false, features = [ "system-tracing", "context-switch-tracing", "sampling", "code-transfer",
            "broadcast" ] }
uuid = { version="1.3.3", features = ["v4", "fast-rng"] }
vec3D = "0.3.0"
smallvec = "1.11.1"
futures = "0.3.28"
type-map = "0.5.0"
circular-buffer = "0.1.6"
arrayvec = "^0.7.4"
obj-rs = "0.7.1"
bytemuck = { version = "1.16.1", features = ["derive"] }
rlimit = "0.10.1"
serde = { version = "1.0.163", features = ["derive"] }
ron = "0.8.1"

[dev-dependencies]
ctor = "0.2.0"

[features]
default = []
deadlock_detection = ["parking_lot/deadlock_detection"]
db_failure_injection = []

# Performance tracing
tracy = ["tracy-client/enable"]

dhat-heap = []
