[package]
name = "perovskite_server"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "Multiplayer voxel game written in Rust - Game server"
authors = ["drey7925 <drey@dreyclimbs.rocks>"]
repository = "https://github.com/drey7925/perovskite"
categories = ["game-engines"]

build = "build.rs"

[dependencies]
anyhow = {  version = "1" , features = ["backtrace"]}
bitvec = "1.0.1"
cbloom = "0.1.3"
cgmath = "0.18.0"
clap = { version = "4.3.0", features = ["derive"] }
perovskite_core = { path = "../perovskite_core", version = "0.2.1" }
hashbrown = "0.16.0"
hex = "0.4.3"
integer-encoding = "4.0.0"
itertools = "0.14.0"
lazy_static = "1.4.0"
log = "0.4.17"
opaque-ke = { version = "2.1.0-pre.1", features = ["argon2"] }
parking_lot = { version = "0.12.1" }
prost = "0.14.1"
rand = "0.8.5"
rocksdb = "0.24.0"
rustc-hash = "2.0.0"
sha2 = "0.10.6"
snap = "1.1.0"
thiserror = "2.0.14"
tokio = { version = "1.38.2", features = ["full", "tracing"] }
tokio-stream = "0.1.16"
tokio-util = "0.7.8"
tonic = { version = "0.14.2", features = ["gzip", "tls-ring"] }
tonic-reflection = "0.14.2"
tracing = "0.1.41"
tracy-client = { version = "0.18.2", default-features = false, features = ["system-tracing", "context-switch-tracing", "sampling", "code-transfer",
            "broadcast" ] }
uuid = { version="1.3.3", features = ["v4", "fast-rng"] }
smallvec = "1.11.1"
futures = "0.3.28"
type-map = "0.5.0"
circular-buffer = "1.1.0"
arrayvec = "^0.7.4"
obj-rs = "0.7.1"
bytemuck = { version = "1.24.0", features = ["alloc_uninit", "derive", "extern_crate_alloc", "zeroable_atomics", "zeroable_maybe_uninit"] }
rlimit = "0.10.1"
serde = { version = "1.0.163", features = ["derive"] }
ron = "0.11.0"
either = "1.15.0"
arc-swap = "1.7.1"
seqlock = "0.2.0"

[build-dependencies]
rustc_version = "0.4.1"

[dev-dependencies]
scopeguard = "1.2.0"
loom = { version = "0.7.2", features = ["default", "checkpoint"] }
perovskite_core = { path = "../perovskite_core", version = "0.2.1", features = ["loom_sync"] }

[features]
default = []
deadlock_detection = ["parking_lot/deadlock_detection"]
db_failure_injection = []
# Performance tracing
tracy = ["tracy-client/enable"]

dhat-heap = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)', 'cfg(fuzzing)'] }